--- a/src/sass/layout/great.scss
+++ b/src/sass/layout/great.scss
@@ -6,10 +6,7 @@
 }
 
 .great__top{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @include flex-center-col;
     margin-bottom: Rem(63px);
 }
 
